# algorithmica

./: .gitignore  Cargo.toml  LICENSE  README.md  ft-sync.p1
.github/workflows/: fifthtry-syncer.yml
algorithmica/: Cargo.toml  README.md
algorithmica/src/: bag.rs  lib.rs  subset.rs
algorithmica/src/bag/: box.rs  mod.rs  rc.rs
algorithmica/src/digraph/: mod.rs
algorithmica/src/graph/: bfs.rs  bipartite.rs  connected_component.rs  connectivity.rs  cycle.rs  depth_first_paths.rs  graph.txt  graph2.txt  graph4.txt  mod.rs
algorithmica/src/ll/: bad_safe_dll.rs  dll.rs  mod.rs  singly_ll_pointers.rs  stack.rs
algorithmica/src/lru/: mod.rs
algorithmica/src/math/: matrix.rs
algorithmica/src/pointers/: cell.rs  mod.rs  rc.rs  refcell.rs
algorithmica/src/pq/: max_pq.rs  mod.rs
algorithmica/src/search/: binary.rs  mod.rs  tests.rs  tries.rs
algorithmica/src/sort/: heap_sort.rs  is_sorted.rs  mod.rs  quick_sort.rs  test.rs
algorithmica/src/tree/: bst.rs  mod.rs  rb.rs
docs/: bubble-sort.ftd  index.ftd  sorting.ftd
docs/abrar/rust-algorithms/sorting/: heap-sort.ftd  insertion-sort.ftd  merge-sort.ftd  quick-sort.ftd  selection-sort.ftd
docs/sorting/: shell-sort.ftd
redblackbst/: Cargo.toml  README.md
redblackbst/src/: lib.rs
rust-challenges/: Cargo.toml
rust-challenges/ccwc/: Cargo.toml  README.md
rust-challenges/ccwc/src/: lib.rs
rust-fundamentals/: Cargo.toml
rust-fundamentals/macros/: Cargo.toml  README.md
rust-fundamentals/macros/src/: lib.rs
rust-networks/: Cargo.toml  README.md
rust-networks/ws-chat-server/: Cargo.toml
sample-projects/: Cargo.toml  test.md
sample-projects/md-renderer/: Cargo.toml
sample-projects/md-renderer/src/: handler.rs  lib.rs  utils.rs
sample-projects/src/: main.rs
src/: lib.rs  subset.rs
src/digraph/: mod.rs
src/graph/: bfs.rs  connectivity.rs  depth_first_paths.rs  mod.rs
src/math/: matrix.rs
src/search/: mod.rs  tests.rs
src/sort/: bubble.rs  bubble_sort.rs  insertion.rs  merge_sort.rs  mod.rs  selection.rs  sort_test.rs  test.rs
src/tree/: bst.rs  mod.rs  rb.rs
tcp-cli-server/: Cargo.toml
tests/: graph2.txt  graph3.txt
ws-chat-server/: Cargo.toml
