[package]
name = "algorithmica"
version = "0.1.9"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Rust Algorithms"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/AbrarNitk/algorithmica"
documentation = "https://www.fifthtry.com/abrar/rust-algorithms/"
homepage = "https://github.com/AbrarNitk/algorithmica"
readme = "README.md"
keywords = ["algorithms", "search", "math", "data", "sort"]

[dependencies]
