[package]
name = "redblackbst"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Rust Algorithms"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/AbrarNitk/algorithmica"
documentation = "https://github.com/AbrarNitk/algorithmica"
homepage = "https://github.com/AbrarNitk/algorithmica"
readme = "README.md"
keywords = ["algorithms", "search", "rbtree", "balanced_tree"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
