[package]
name = "sample-projects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-renderer = {path = "./md-renderer"}
tokio = { version = "1.29", features = ["rt", "rt-multi-thread", "net", "process", "macros"] }